--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@tailwindcss/typography": "^0.5.10",
 		"alpinejs": "^3.13.3",
 		"astro": "^4.0.3",
+		"autoprefixer": "^10.4.19",
 		"prettier": "^3.1.0",
 		"prettier-plugin-astro": "^0.12.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
